main-banner-image fixed on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
     'header' 
     'content'
     'categories'
+    'video'
     'suggested'
     'footer';
 }
@@ -155,7 +156,7 @@ footer{
     background-image: url(../images/banner_home.jpeg);
     background-size: cover;
     background-position: center;
-    width: 100vw;
+    width: 100%;
     height: 400px;
     padding: 0;
     
